2006-06-28  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* WizardStepCollection.cs: Fixed Add methods to initialize
	WizardStep.Wizard property
	* Wizard.cs: Fixed ActiveStepIndex, it should be -1 if there no steps
	Fixed GetStepType, if only one step present, it should be FinishStep
	Fixed styles of tables for more accurate rendering, fixed Wizard 
	buttons order

2006-06-28	Konstantin Triger <kostat@mainsoft.com>

	* FormView.cs: instantiate correct template when the bounding data source is
		empty.

2006-06-25	Konstantin Triger <kostat@mainsoft.com>

	* FormView.cs: disabling setting out of range FormView.PageIndex.

2006-06-21 Andrew Skiba <andrews@mainsoft.com>

	* FileUpload.cs: added

2006-06-20 Andrew Skiba <andrews@mainsoft.com>

	* FormView.cs: handle CssClass attribute

2006-06-14 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Button.cs: do something in PostBackUrl.
	* Repeater.cs: when creating the RepeaterItemCollection, initialize
	'items' if it hasn't been done yet. Fixes bug #78417.

2006-06-14  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* BaseDataList.cs: added ConnectToDataSource method that called from 
	OnLoad, fixed GetData method
	* Wizard.cs: fixed bug when called MoveTo after that control hierarchy
	has been created

2006-06-14  Andrew Skiba <andrews@mainsoft.com>

	* Menu.cs: add CssStyle value to the rendered class attribute

2006-06-13 Juraj Skripsky <js@hotfeet.ch>

	* Calendar.cs: Make sure WebControls.Enabled is respected.
	* SelectedDatesCollection.cs: Set time for all DateTime object passed in
	to 12:00am as MS.NET does the same.
	Fixes bug #71251.

2006-06-13  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* Repeater.cs: fixed ConnectToDataSource method, subscribed to
	DataSourceViewChanged, looks for a datasource in its parent control
	fixed GetData method, should not get data if datasource is null

2006-06-13  Konstantin Triger  <kostat@mainsoft.com>
